// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PromptContent rendering tests PromptContent - expanded false - rendered test 1`] = `
<div>
  <div
    data-testid="prompt-content"
  >
    <div
      class="w-full flex items-center justify-between p-4 bg-slate-50 rounded-lg border border-slate-200 hover:bg-slate-100 transition-colors"
      data-testid="expand-toggle"
    >
      <span
        class="font-semibold text-slate-900 flex items-center gap-2"
      >
        Current Prompt Content
      </span>
      <div
        class="flex items-center gap-2"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-primary-foreground h-9 has-[>svg]:px-3 p-2 bg-slate-50 hover:bg-slate-200 rounded transition-colors"
          data-slot="button"
          data-testid="copy-btn"
          title="Copy to clipboard"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-copy w-4 h-4 text-slate-600"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="14"
              rx="2"
              ry="2"
              width="14"
              x="8"
              y="8"
            />
            <path
              d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
            />
          </svg>
        </button>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right w-5 h-5 text-slate-600"
          data-testid="chevron-right"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`PromptContent rendering tests PromptContent - expanded true - rendered test 1`] = `
<div>
  <div
    data-testid="prompt-content"
  >
    <div
      class="w-full flex items-center justify-between p-4 bg-slate-50 rounded-lg border border-slate-200 hover:bg-slate-100 transition-colors"
      data-testid="expand-toggle"
    >
      <span
        class="font-semibold text-slate-900 flex items-center gap-2"
      >
        Current Prompt Content
      </span>
      <div
        class="flex items-center gap-2"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-primary-foreground h-9 has-[>svg]:px-3 p-2 bg-slate-50 hover:bg-slate-200 rounded transition-colors"
          data-slot="button"
          data-testid="copy-btn"
          title="Copy to clipboard"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-copy w-4 h-4 text-slate-600"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="14"
              rx="2"
              ry="2"
              width="14"
              x="8"
              y="8"
            />
            <path
              d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
            />
          </svg>
        </button>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right w-5 h-5 text-slate-600"
          data-testid="chevron-right"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`PromptContent rendering tests PromptContent - expanded true - rendered test 2`] = `
<div>
  <div
    data-testid="prompt-content"
  >
    <div
      class="w-full flex items-center justify-between p-4 bg-slate-50 rounded-lg border border-slate-200 hover:bg-slate-100 transition-colors"
      data-testid="expand-toggle"
    >
      <span
        class="font-semibold text-slate-900 flex items-center gap-2"
      >
        Current Prompt Content
      </span>
      <div
        class="flex items-center gap-2"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-primary-foreground h-9 has-[>svg]:px-3 p-2 bg-slate-50 hover:bg-slate-200 rounded transition-colors"
          data-slot="button"
          data-testid="copy-btn"
          title="Copy to clipboard"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-copy w-4 h-4 text-slate-600"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="14"
              rx="2"
              ry="2"
              width="14"
              x="8"
              y="8"
            />
            <path
              d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
            />
          </svg>
        </button>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-down w-5 h-5 text-slate-600"
          data-testid="chevron-down"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m6 9 6 6 6-6"
          />
        </svg>
      </div>
    </div>
    <div
      class="mt-2 p-4 bg-white border border-slate-200 rounded-lg"
    >
      <pre
        class="whitespace-pre-wrap text-sm text-slate-700 font-mono"
      >
        content 1
      </pre>
    </div>
  </div>
</div>
`;
